...
                    onChangeText={setPassword}
                    secureTextEntry
                    style={styles.input}
                />

                <TextInput
                    label="Username (for registration)"
                    value={username}
                    onChangeText={setUsername}
                    autoCapitalize="none"
                    style={styles.inputLargeMargin}
                />

...

                <Button
                    mode="text"
                    onPress={onResetPassword}
                    style={styles.textButton}
                >
                    <Text>Reset Password</Text>
                </Button>
            </Card.Content>
        </Card>
    )
}

...
